--- a/Style/style.css
+++ b/Style/style.css
@@ -136,7 +136,7 @@ nav{
 
 /*================== HEADER ===============*/
 header{
-    width: 100vw;
+    max-width: 100vw;
     height: 100vh;
     position: relative;
     top: 0;
@@ -233,6 +233,75 @@ header{
 .header__frame{
     width: 14rem;
     border: 0.4rem solid var(--color-bg-3);
+    box-shadow: 0 0 4rem rgba(0,0,0,0.5);
+    position: absolute;
+    transform: rotate(-10deg);
+    transform-origin: bottom left;
+    transition: var(--transition);
+}
+.header__frame:nth-child(2){
+    transform: rotate(20deg);
+    top:-2rem;
+    left: 2rem;
 
 }
 
+.header__frames:hover .header__frame{
+    transform: rotate(0);
+}
+
+.header__frames:hover .header__frame:nth-child(2){
+    top:0;
+    left: 15rem;
+}
+
+/* General style for contact buttons */
+.contact__btn{
+    color:var(--color-bg-1);
+    width: 10rem;
+    height: 10rem;
+    border-radius: 50%;
+    display: grid;
+    place-items: center;
+    cursor: pointer;
+    transition: var(--transition);
+}
+
+.header__btn{
+    background: linear-gradient(-30deg, var(--color-primary-variant),var(--color-primary),var(--color-primary-variant));
+    position: absolute;
+    right: 6%;
+    bottom: -3rem;
+}
+
+.header__btn:hover{
+    box-shadow: 0 2rem 2rem rgba(0,0,0,0.3);
+    transform: translateY(-1rem);
+    color: var(--color-bg-1);
+}
+
+.contact__btn i{
+    font-size: 3.5rem;
+    position: absolute;
+}
+
+.contact__btn p{
+    font-size: 1rem;
+    font-weight: 600;
+    width: 10rem;
+    height: 10rem;
+    display:flex;
+    justify-content: center;
+    animation: spinText 30s linear infinite;
+}
+
+.contact__btn p span{
+    position: absolute;
+    transform-origin: 0.3rem 5rem;
+}
+
+@keyframes spinText {
+    to{
+        transform: rotate(360deg);
+    }
+}
