--- a/Style/style.css
+++ b/Style/style.css
@@ -305,3 +305,89 @@ header{
         transform: rotate(360deg);
     }
 }
+
+/*================== About ===============*/
+#about{
+    margin-top: 18rem;
+}
+
+.about__container{
+    display: grid;
+    grid-template-columns: 10rem 26rem auto;
+    gap: 3rem;
+    position: relative;
+}
+
+.about__title{
+    position: absolute;
+    top: -7rem;
+    z-index: 1;
+}
+
+.about__btn{
+    color: var(--color-primary-variant);
+    align-self: end;
+}
+
+.about__btn:hover{
+    transform: translateY(-1rem);
+    color: var(--color-primary);
+}
+
+.about__image{
+ position: relative;
+}
+
+.about__image-bg{
+    width: 16rem;
+    height: 24rem;
+    position: absolute;
+    bottom: 0;
+    background: var(--color-bg-4);
+}
+
+.about__image-lg{
+    position: relative;
+    left: 1rem;
+    bottom: 1rem;
+    filter: saturate(0) brightness(0.3);
+    transition: 500ms ease;
+}
+
+.about__image-sm{
+    position: absolute;
+    top: 3rem;
+    left: 8rem;
+    height: 22rem;
+    width: 22rem;
+    overflow: hidden;
+    box-shadow: 2rem 2rem 2rem rgb(0, 0, 0, 0.2);
+    transition: 500ms ease;
+}
+
+.about__image:hover .about__image-sm{
+    opacity: 0;
+}
+
+.about__image:hover .about__image-lg{
+    filter: saturate(1) brightness(1);
+    box-shadow: 0 3rem 3rem rgb(0, 0, 0, 0.2);
+    border: 1 rem solid var(--color-bg-4);
+    left: 0;
+    bottom: 0;
+}
+
+.about__right{
+    margin-left: 5rem;
+}
+
+.about__right p{
+    margin: 0 4rem 1.5rem 0;
+}
+
+
+
+
+
+
+
