--- a/Style/style.css
+++ b/Style/style.css
@@ -361,7 +361,7 @@ header{
     height: 22rem;
     width: 22rem;
     overflow: hidden;
-    box-shadow: 2rem 2rem 2rem rgb(0, 0, 0, 0.2);
+    box-shadow: 2rem 2rem 2rem rgba(0, 0, 0, 0.2);
     transition: 500ms ease;
 }
 
@@ -371,7 +371,7 @@ header{
 
 .about__image:hover .about__image-lg{
     filter: saturate(1) brightness(1);
-    box-shadow: 0 3rem 3rem rgb(0, 0, 0, 0.2);
+    box-shadow: 0 3rem 3rem rgba(0, 0, 0, 0.2);
     border: 1 rem solid var(--color-bg-4);
     left: 0;
     bottom: 0;
@@ -386,8 +386,122 @@ header{
 }
 
 
+/*================== Galery ===============*/
+#gallery{
+    margin-top: 12rem;
+}
+
+.gallery__head{
+    display: flex;
+    justify-content: space-between;
+}
+
+.gallery__container p{
+    width: 45rem;
+}
+
+.swiper-wrapper{
+    margin-top: 5rem;
+    height: 37rem;
+    padding-bottom: 5rem;
+}
+
+.swiper-slide{
+    border: 0.5rem solid var(--color-bg-4);
+    height: fit-content;
+    max-height: 36rem;
+    overflow: hidden;
+    transition: var(--transition);
+}
+
+.swiper-slide:hover{
+    box-shadow: 0 3rem 3rem rgba(0, 0, 0, 0.4);
+}
+
+.swiper-slide img{     
+   filter: saturate(0);
+   transition: var(--transition);
+}
+
+.swiper-slide:hover img {
+    filter: saturate(1);
+}
+
+.swiper-pagination-bullet{
+    background-color: var(--color-primary);
+}
+
+
+/*================== Exhibitions ===============*/
+#exhibitions{
+    margin-top: 10rem;
+}
+
+.exhibitions__container{
+    position: relative;
+}
+
+.exhibitions__empty{
+    position: absolute;
+    width: 26rem;
+    right: 14rem;
+    top: 0;
+}
+
+.exhibitions__head{
+    display: grid;
+    grid-template-columns: auto 10rem;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.exhibitions__head > p{
+   width: 45rem;
+}
+
+.exhibitions__btn{
+    color: var(--color-primary-variant);
+}
+
+.exhibitions__btn:hover{
+    transform: translateY(-1rem);
+}
+
+.exhibitions__galery{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    margin-top: 5rem;
+    gap: 3rem;
+}
+
+.exhibitions__galery article{
+    border: 0.5rem solid var(--color-bg-4);
+    transition: var(--transition);
+}
 
 
 
+.exhibitions__galery article:nth-child(1){
 
+    grid-row: 1/3;
+}
+.exhibitions__galery article:nth-child(4){
+    grid-column: 2/4;
+    grid-row: 2/3;
+}
 
+.exhibitions__galery article img{
+    height: 100%;
+    filter: saturate(0);
+    transition: var(--transition);
+}
+
+.exhibitions__galery article:hover img {
+    filter: saturate(1);
+}
+
+.exhibitions__galery article:hover{
+    box-shadow: 0 4rem 4rem rgba(0, 0, 0, 0.5);
+}
+
+/*================== Footer ===============*/
