--- a/Style/style.css
+++ b/Style/style.css
@@ -505,3 +505,44 @@ header{
 }
 
 /*================== Footer ===============*/
+
+footer{
+    margin-top: 37rem;
+}
+
+.footer__container{
+
+    border-top: 0.5rem solid var(--color-bg-4);
+    padding-top: 5rem;
+}
+
+.footer__head{
+    display: flex;
+    align-items: center;
+    gap: 2rem;
+}
+
+.footer__btn{
+    width: 5rem;
+    height: 5rem;
+    border: 0.2rem solid var(--color-primary-variant);
+    border-radius: 50%;
+    font-size: 3rem;
+    color: var(--color-primary-variant);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: var(--transition);
+}
+
+.footer__btn:hover{
+    transform: translateY(-1rem);
+    border-color: var(--color-primary);
+}
+
+.footer_links{
+    margin: 3rem 0 5rem;
+    display:flex ;
+    align-items: center;
+    gap: 5rem;
+}
