--- a/Style/style.css
+++ b/Style/style.css
@@ -27,6 +27,19 @@
     box-sizing: border-box;
 }
 
+
+::-webkit-scrollbar{
+    width: 0.5rem;
+    background: rgb(229, 165, 93, 0.2);
+}
+
+::-webkit-scrollbar-thumb{
+    width: 100%;
+    background: var(--color-primary-variant);
+    border-radius: 0.25rem;
+}
+
+
 html{
     scroll-behavior: smooth;
 }
@@ -546,3 +559,335 @@ footer{
     align-items: center;
     gap: 5rem;
 }
+
+/*================== Media Queries  Medium devices ===============*/
+
+   
+
+@media screen and (max-width:1024px){
+    .container{
+        width: var(--container-width-md);
+        position: relative;
+    }
+
+    h1{
+        font-size: 2.5rem;
+        line-height: 1.3;
+    }
+
+    h2{
+        font-size: 2.5rem;
+    }
+
+     /*================== NAV ===============*/
+
+    .nav__socials{
+        display: none;
+    }
+
+    .nav_links{
+        position: absolute;
+        top: 100%;
+        right: 0;
+        flex-direction: column;
+        gap: 0;
+        display: none;
+        perspective: 400px;
+    }
+
+    .nav_links li{
+        height: 5rem;
+        box-shadow: -3rem 3rem 3rem rgba(0, 0, 0, 0.7);
+        animation: navAnimation 600ms ease forwards;
+        transform: rotateX(90deg);
+        opacity: 0;
+        transform-origin: top;
+    }
+
+    .nav_links li:nth-child(2){
+        animation-delay: 200ms;
+    }
+    .nav_links li:nth-child(3){
+        animation-delay: 400ms;
+    }
+    .nav_links li:nth-child(4){
+        animation-delay: 600ms;
+    }
+
+    @keyframes navAnimation{
+        to {
+            transform: rotateX(0);
+            opacity: 1;
+        }
+        
+    }
+
+    .nav_links li a{
+        background: var(--color-bg-4);
+        height: 100%;
+        width: 100%;
+        display: flex;
+        align-items: center;
+        padding: 1rem 5rem 1rem 3rem;
+        border-top: 1px solid var(--color-bg-2);
+    }
+
+    .na_toggle-btn{
+        display: inline-block;
+        font-size: 2rem;
+        background: transparent;
+        cursor: pointer;
+        color: var(--color-white);
+    }
+
+    #nav_toggle-close{
+        display: none;
+    }
+
+
+
+    
+/*================== HEADER ===============*/
+
+    head{
+    height: fit-content;
+    padding: 14rem 0 12rem;
+    display: grid;
+      place-items: center;
+    }
+
+ .header__image-bg, .header__image-sm{
+    display: none;
+ }
+
+ .header__container{
+   grid-template-columns: 40% 54%;
+   gap: 6%;
+   margin: 0;
+  }
+
+  .header__image-lg{
+    filter: saturate(1) brightness(1);
+    border: 1rem solid var(--color-bg-2);
+    top: 0;
+    width: 100%;
+    left: 0;
+   }
+
+   .empty{
+    display: none;
+   }
+
+   .header__right p{
+    width: 100%;
+    margin-top: 1.5rem;
+   }
+
+   .header__frames, .contact__btn{
+    display: none;
+   }
+
+   .header__btn-md{
+    background: linear-gradient(135deg, var(--color-primary-variant), var(--color-primary));
+    color: var(--color-bg-1);
+    margin-top: 2rem;
+    display: inline-block;
+    padding: 0.6rem 1.6rem;
+    font-weight: 600;
+    border-radius: 0.3rem;
+   }
+
+   .header__btn-md:hover{
+    color: var(--color-bg-1);
+   }
+
+   /*================== ABOUT ===============*/
+
+   .about__container{
+    grid-template-columns:  40% 54% ;
+    gap: 6%;
+   }
+
+   .about__image-bg, .about__image-sm{
+    display: none;
+   }
+
+   .about__image-lg{
+    left: 0;
+    top: 0;
+    filter: saturate(1) brightness(1);
+   }
+
+   .about__image:hover .about__image-lg{
+    border: none;;
+   }
+
+   .about__right{
+    margin: 0;
+   }
+
+   .about__right p{
+    margin-bottom: 1rem;
+   }
+
+
+    /*================== GALLLERY ===============*/
+
+    #galler{
+        margin-top: 8rem ;
+    }
+
+    .gallery__container p{
+        width: 100%;
+        margin-top: 2rem;
+    }
+
+    .swiper-wrapper{
+        margin-top: 4rem;
+        height: fit-content;
+    }
+
+    /*================== EXHIBITIONS ===============*/
+
+    .exhibitions__head > P{
+        width: 100% ;
+        margin-top: 2rem;
+    }
+
+    .exhibitions__galery{
+        margin-top: 3rem;
+        gap: 1rem;
+    }
+
+    .exhibitions__galery article{
+        border: none;
+    }
+
+}
+
+/*================== Media Queries Small devices ===============*/
+
+@media screen and (max-width: 600px){
+
+    h1, h2{
+        font-size: 2rem;
+        line-height: 2.3rem;
+        color: var(--color-white);
+        margin-top: 1rem;
+    }
+
+    header{
+        padding: 0;
+        padding-bottom: 6rem;
+        margin-top: -25rem;
+    }
+
+    .header__container{
+        grid-template-columns: 1fr;
+        gap: 1rem;
+        text-align: center;
+    }
+
+    .header__image-lg{
+        width: 80%;
+        height: 20rem;
+        margin: 0 auto;
+        margin-top: 7rem;
+        overflow: hidden;
+        border-radius: 15rem 15rem 0 0 ;
+    }
+
+    .header__head{
+        justify-content: center;
+    }
+
+    .header__right p{
+        margin-top: 1rem;
+    }
+
+    .header__title{
+        margin-top: 1rem;
+    }
+
+    .header__btn-md{
+        margin: 10px
+    }
+
+
+  /*================== About ===============*/
+
+  .about__container{
+    grid-template-columns: 1fr;
+    gap: 2rem;
+  }
+
+  .about__right p{
+    width: 100%;
+  }
+
+  .swiper-slide{
+    border: 0;
+  }
+
+
+ /*================== Galery ===============*/
+
+ #gallery{
+    margin-top: 6rem;
+ }
+
+ .gallery__container P{
+    margin-top: 1rem;
+ }
+
+ .swiper-wrapper{
+    margin-top: 3rem;
+ }
+
+ /*================== Exhibitions ===============*/
+ #exibitions{
+    margin-top: 6rem;
+ }
+
+ .exhibitions__head{
+    grid-template-columns: 1fr;
+ }
+
+ .exhibitions__head > p{
+    margin-top: 1rem;
+ }
+
+ .exhibitions__galery{
+    display: block;
+ }
+
+ .exhibitions__galery article{
+    width: 100%;
+    height: fit-content;
+    margin-bottom: 1rem;
+ }
+
+ /*================== Footer ===============*/
+
+ footer{
+    margin-top: 1400px;
+ }
+ .footer__head{
+    flex-direction: column;
+ }
+
+ .footer__head h2{
+    font-size: 1.5rem;
+ }
+
+ .footer_links{
+    flex-direction: column;
+    gap: 2rem;
+    margin-top: 5rem;
+ }
+
+
+}
+
+
+   
